作者名称修改

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["sts", "oss", "laravel", "lumen", "aliyun"],
     "authors": [
         {
-            "name": "helium",
+            "name": "bmsLaravel",
             "email": "18200172438@163.com"
         }
     ],
